# Yellow_belt

./: .gitignore  tasks.cpp
tasks/: link.cpp  sqr  sqr.cpp  sqr_part.cpp  tasks  tasks.cpp  tasks_part.cpp
tasks/final_task/: CMakeLists.txt  condition_parser.h  condition_parser_test.cpp  database.cpp  database.h  database_test.cpp  date.cpp  date.h  date_test.cpp  main.cpp  node.cpp  node.h  test_db.h  test_runner.cpp  test_runner.h
tasks/week1/: a.out  link  link.cpp  sqr.cpp  t.cpp  tasks.cpp
tasks/week2/: Rational.cpp  bus_decompose  bus_decompose.cpp  test_equation  test_equation.cpp  test_palindrome.cpp  test_person.cpp  test_rational.cpp
tasks/week3/: func  func.cpp  phone_number.cpp  rectangle.h
tasks/week3/decompose/: CMakeLists.txt  bus.tar  bus_manager.cpp  bus_manager.h  main.cpp  query.cpp  query.h  responses.cpp  responses.h
tasks/week4/: arithmetic.cpp  arithmetic_bracket.cpp  find_greater_elements.cpp  find_near.cpp  find_start.cpp  find_start_char.cpp  merge_div2.cpp  merge_div3.cpp  person_with_binary_search.cpp  remove.cpp  split.cpp  splittowords.cpp  suffle.cpp  vectorpart.cpp
tasks/week4/demogr/: main.cpp  medage.cpp  medage.h  person.h  status.cpp  status.h
tasks/week5/: 1.txt  animal.cpp  figure  figure.cpp  not.cpp  notifier  notifier.cpp  ref  ref.cpp  test  test.cpp
